syntax = "proto3";

import "app/improving/common/common_domain.proto";
import "google/protobuf/timestamp.proto";

package app.improving.ordercontext;

enum OrderStatus {
    DRAFT = 0;
    PENDING = 2;
    INPROCESS = 3;
    READY = 4;
    DELIVERED = 5;
    CANCELLED = 6;
    UNKNOWN = 7;
}

message LineItem {
        ProductId product = 1;
        int32     quantity = 2;
        double    lineTotal = 3;
}

message OrderInfo {
        OrderId orderId = 1;
        repeated LineItem lineItems = 2;
        string specialInstructions = 3;
        double orderTotal = 4;
}

message OrderMetaInfo  {
    OrderId orderId = 1;
    MemberId memberId = 2;
    StoreId storeId = 3;
    google.protobuf.Timestamp createdOn = 4;
    MemberId lastModifiedBy = 5;
    google.protobuf.Timestamp lastModifiedOn = 6;
    OrderStatus status = 7;
}

message OrderCreated {}
message OrderStatusChanged {}
message OrderInfoUpdated {}
message OrderCanceled {}
message GetOrderInfo {}